tests/repository/snapshots/users/can_create_user@users.snap
---
source: tests/repository/users.rs
assertion_line: 48
expression: result
---
Ok(
    UserModel {
        id: ID,
        email: "test@example.com",
        username: "testuser",
        password_hash: "PASSWORD",
        image: None,
        verified_at: None,
        verification_token: "ID",
        reset_token: None,
        reset_token_sent_at: None,
        created_at: DATE,
        updated_at: DATE,
    },
)
