tests/repository/snapshots/users/can_find_user_by_email@users.snap
---
source: tests/repository/users.rs
assertion_line: 74
expression: result
---
Ok(
    Some(
        UserModel {
            id: ID,
            email: "test@example.com",
            username: "testuser",
            password_hash: "PASSWORD",
            image: None,
            verified_at: None,
            created_at: DATE,
            updated_at: DATE,
        },
    ),
)
