tests/repository/snapshots/users/can_find_user_by_id@users.snap
---
source: tests/repository/users.rs
assertion_line: 76
expression: result
---
Ok(
    UserModel {
        id: 3c008e68-88fa-4072-808e-6888fa60724c,
        email: "james.moriaty@continental.org",
        username: "james_moriaty",
        password_hash: "$argon2d$v=19$m=16,t=2,p=1$cTZhOHVtY2dJTzBqYTBudw$/704JvCsW23pidisyXK+Tw",
        image: None,
        verified_at: None,
        created_at: 2024-12-20T11:45:00+00:00,
        updated_at: 2024-12-20T11:45:00+00:00,
    },
)
