tests/repository/snapshots/users/can_reset_password@users.snap
---
source: tests/repository/users.rs
assertion_line: 178
expression: result
---
Ok(
    UserModel {
        id: e761d8e3-fc3e-4a2e-a6c9-7c7a4f2130e8,
        email: "jane.smith@globex.com",
        username: "jane_smith",
        password_hash: "PASSWORD",
        image: None,
        verified_at: None,
        verification_token: "e761d8e3-fc3e-4a2e-a6c9-7c7a4f2130e8",
        reset_token: None,
        reset_token_sent_at: None,
        created_at: DATE,
        updated_at: DATE,
    },
)
